apps/fast-api-app/kong-ingress.yaml
# Managed by scripts/standardize_metadata.py
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: <app>
  namespace: <app>
  annotations:
    konghq.com/strip-path: 'false'
    kubernetes.io/ingress.class: kong
    konghq.com/methods: GET, POST
    goldenpath.idp/id: APPS_FAST_API_APP_METADATA
    goldenpath.idp/owner: platform-team
spec:
  ingressClassName: kong
  rules:
    - http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: app
                port:
                  number: 3000
